Separate the parent directory link in FTP listings.

Thus it won't get sorted along with the rest of the file listings and
end up on the bottom.

BUG=641097

Review-Url: https://codereview.chromium.org/2792533003
Cr-Commit-Position: refs/heads/master@{#466103}

Former-commit-id: 9719cebca5c0195cbac3e23a8ec9a363c78932f1